--- a/http/auth.html
+++ b/http/auth.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
     <title>My Website</title>
     <script src="auth.js"></script>
 </head>
